# MCP-Notion

./: .env.example  .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs  notion.rs  server.rs
