[package]
name = "notion-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP Server for Notion integration"
license = "MIT"

[dependencies]
actix-web = "4.4.1"
actix-cors = "0.6.5"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
log = "0.4.20"
env_logger = "0.10.1"
dotenv = "0.15.0"
async-trait = "0.1.74"
anyhow = "1.0.75"
